--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -1,4 +1,7 @@
 {
+  "Home": "Home",
+  "All Friends": "All Friends",
+  "Share or Import": "Share or Import",
   "login-continueWithGoogle": "Continue with Google",
   "login-message": "The WebApp that will make your friends <strong>remember you</strong> because you <strong>remember them</strong>"
 }
