--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -1,9 +1,16 @@
 {
-  "Home": "Home",
   "All Friends": "All Friends",
+  "Home": "Home",
   "Share or Import": "Share or Import",
+  "home": {
+    "searchFriends": "Search for a Friend"
+  },
   "login": {
     "continueWithGoogle": "Continue with Google",
     "message": "The WebApp that will make your friends <strong>remember you</strong> because you <strong>remember them</strong>"
+  },
+  "searchResults": {
+    "title": "Type your friend's name...",
+    "results": "Results"
   }
 }
