added translations for the edit errors form

--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -66,6 +66,12 @@
     "addFirst": "¡Añade al primero!"
   },
   "editFriend": {
+    "errors": {
+      "fullName": "El nombre completo debe contener entre 2 y 15 letras por parte. No se permiten caracteres especiales ni acentos",
+      "favoriteColor": "El color debe contener entre 2 y 15 letras, solo una palabra",
+      "likesToCelebrate": "Elige una opción",
+      "candyPreference": "Elige una opción"
+    },
     "fullName": {
       "label": "Nombre Completo"
     },
