--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -66,6 +66,12 @@
     "addFirst": "Add your first!"
   },
   "editFriend": {
+    "errors": {
+      "fullName": "Full name must fall in the format 'First Last', between 2-15 letters each. No special characters or tildes allowed",
+      "favoriteColor": "Color name must be between 3-15 letters, just one word",
+      "likesToCelebrate": "Must choose an option",
+      "candyPreference": "Must choose an option"
+    },
     "fullName": {
       "label": "Full Name"
     },
