added missing question mark to spanish translation

--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -176,7 +176,7 @@
       "directLink": "¿Muy lejos para escanear el código QR? Comparte tu link directo:"
     },
     "import": {
-      "title": "Tienes un código QR? Escanéalo o súbelo a continuación:"
+      "title": "¿Tienes un código QR? Escanéalo o súbelo a continuación:"
     },
     "notSharing": "Lo sentimos. Parece que la lista que buscas es privada.",
     "notSharingBtn": "Entendido",
